# swoop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/docs/: booking-options-proto-notes.md  google-flights-protobuf-schema.md
.claude/hooks/: check-commit-message.sh  check-secrets.sh  run-tests-async.sh  stop-run-tests.sh
.github/workflows/: ci.yml  live-canary.yml  mutation.yml
docs/: generate_readme_screenshot.py
scripts/: analyze_brand_blocks.py  capture_currency_fixtures.py  capture_fixtures.py  dump_booking_options.py  investigate_missing_brands.py  record_booking_corpus.py  record_full_corpus.py  rerecord_corpus.py  sweep_cabin_field.py  validate_cabin_field.py
swoop/: __init__.py  __main__.py  _booking.py  _formatting.py  _selection.py  _validate.py  builders.py  decoder.py  exceptions.py  flights.proto  flights_pb2.py  models.py  rpc.py
swoop/cli/: __init__.py  commands.py  formatters.py  utils.py
tests/: conftest.py  factories.py  test_api.py  test_api_surface.py  test_beam_search_params.py  test_benchmarks.py  test_chaos.py  test_check_price.py  test_cli.py  test_cli_branches.py  test_cli_formatters.py  test_connection_and_params.py  test_contract_corpus.py  test_currency.py  test_decoder.py  test_error_messages.py  test_filter_ordering.py  test_flight_number.py  test_golden.py  test_golden_currency.py  test_incident_bank.py  test_live_contract.py  test_property.py  test_protobuf_roundtrip.py  test_regressions.py  test_repr.py  test_retry_jitter.py  test_rpc.py  test_selection.py  test_validation.py
tests/fixtures/: booking_options_hypotheses_registry.json  contract_corpus_manifest.json
tests/fixtures/booking_options_corpus_matrix/: matrix.json  matrix_cheap80.json
tests/fixtures/corpus/: booking_aa_economy_response.txt  booking_business_domestic.txt  booking_delta_mixed_response.txt  booking_first_intl.txt  booking_jfk_lax_blue_response.txt  booking_mideast_business_response.txt  booking_mixed_business_economy_domestic.txt  booking_mixed_business_premium.txt  booking_mixed_first_business.txt  booking_premium_economy_domestic.txt
tests/fixtures/responses/: shopping_empty.json  shopping_multileg.json  shopping_oneway.json  shopping_oneway_au.json  shopping_oneway_br.json  shopping_oneway_business.json  shopping_oneway_ca.json  shopping_oneway_eu.json  shopping_oneway_first.json  shopping_oneway_gb.json  shopping_oneway_in.json  shopping_oneway_jp.json  shopping_oneway_kr.json  shopping_oneway_premium_economy.json  shopping_oneway_transatlantic.json  shopping_oneway_us.json  shopping_roundtrip.json  shopping_roundtrip_business.json  shopping_roundtrip_domestic.json  shopping_roundtrip_first.json  shopping_roundtrip_premium_economy.json  shopping_roundtrip_transpacific.json  shopping_roundtrip_us.json
tests/incidents/: README.md  manifest.json
