[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swoop-flights"
dynamic = ["version"]
description = "Google Flights price scraper. Search flights programmatically via the same RPC endpoints the web app uses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ayush Saraswat" }]
keywords = ["google-flights", "flights", "travel", "scraper", "prices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "primp>=1.0.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
validation = ["airportsdata>=1.3.0"]

[project.urls]
Homepage = "https://github.com/saraswatayu/swoop"
Issues = "https://github.com/saraswatayu/swoop/issues"

[tool.hatch.version]
path = "swoop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["swoop"]

[tool.hatch.build.targets.sdist]
include = ["swoop/", "README.md", "LICENSE"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["swoop/flights_pb2.py", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: integration tests that hit real Google Flights API (deselect with -m 'not live')",
]

[tool.mutmut]
paths_to_mutate = "swoop/decoder.py,swoop/rpc.py,swoop/_validate.py,swoop/_booking.py"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x --ignore=tests/test_booking_options_corpus.py --ignore=tests/test_booking_option_schema_hypotheses.py --ignore=tests/test_corpus_matrix_tools.py --ignore=tests/test_booking_option_field_explorer.py -m 'not live' -q"
