[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swoop-flights"
dynamic = ["version"]
description = "Search Google Flights programmatically. Real prices, typed results, no API key."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ayush Saraswat" }]
keywords = ["google-flights", "flights", "travel", "rpc", "search", "prices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "primp>=1.0.0",
    "protobuf>=6.31.1",
]

[project.optional-dependencies]
validation = ["airportsdata>=1.3.0"]
cli = ["click>=8.1", "rich>=13.0"]

[project.scripts]
swoop = "swoop.cli:main"

[project.urls]
Homepage = "https://github.com/saraswatayu/swoop"
Issues = "https://github.com/saraswatayu/swoop/issues"

[tool.hatch.version]
path = "swoop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["swoop"]

[tool.hatch.build.targets.sdist]
include = ["swoop/", "README.md", "LICENSE"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["swoop/flights_pb2.py", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-skip"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: integration tests that hit real Google Flights API (deselect with -m 'not live')",
]

[tool.mutmut]
paths_to_mutate = "swoop/_selection.py,swoop/_booking.py,swoop/decoder.py,swoop/rpc.py"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x -m 'not live' --benchmark-skip -q"
